python-test_driven_development/tests/5-text_indentation.txt
Text Indentation Module
=======================
This module prints text with indentation after '.', '?' and ':'

Import function
---------------

>>> text_indentation = __import__('5-text_indentation').text_indentation

Invalid input (not string)
--------------------------

>>> text_indentation(12)
Traceback (most recent call last):
...
TypeError: text must be a string

Valid string
------------

>>> text_indentation("Hello. How are you? I'm fine:")
Hello.
<BLANKLINE>
How are you?
<BLANKLINE>
I'm fine:
<BLANKLINE>

String with blank lines
-----------------------

>>> text_indentation("Hello.\n\nHow are you?")
Hello.
<BLANKLINE>
<BLANKLINE>
<BLANKLINE>
How are you?
<BLANKLINE>

Missing one argument
--------------------

>>> text_indentation()
Traceback (most recent call last):
  File "<python-input-14>", line 1, in <module>
    text_indentation()
    ~~~~~~~~~~~~~~~~^^
TypeError: text_indentation() missing 1 required positional argument: 'text'
